Refactor app domain model